[package]
edition = "2018"
name = "browser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version = "^1.1", optional = true}
hashbrown = "0.11.2"
libm = {version = "0.2.1"}
linked_list_allocator = {version = "0.9.0", optional = true}
rusttype = {version = "0.9.2", default-features = false}
tiny-skia = {version = "0.5.1", default-features = false}

[features]
default = ["std", "rusttype/std", "tiny-skia/std"]
libm-math = ["rusttype/libm-math", "tiny-skia/libm"]
no-std = ["libm-math", "linked_list_allocator"]
std = ["fltk"]
